# bloco

./: Cargo.toml  LICENSE  README.md
.github/workflows/: actions.yml  bloco.yml
examples/: simple.rs
src/: blob.rs  bloco.rs  chunk.rs  core.rs  error.rs  file.rs  fileref.rs  hash.rs  lib.rs  lru.rs  memory.rs  ref.rs  store.rs
src/blobstore/: lru.rs  memory.rs  mod.rs
src/indexer/: mod.rs  sled.rs  sqlite.rs
src/store/: btree.rs  cached.rs  cachedfile.rs  chunk.rs  encrypted.rs  file.rs  lru.rs  mod.rs
