[package]
name = "bloco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "2.0.0-alpha"
blake3 = "1.2"
hex = "0.4.3"
http = "0.2.5"
lazy_static = "1.4.0"
orion = "0.17.0"
sled = "0.34.7"
thiserror = "1.0.30"
uluru = "3.0.0"
