[package]
name = "bloco"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
blake3 = "1.2"
bytes = "1.1.0"
futures = "0.3.19"
hex = "0.4.3"
http = "0.2.5"
lazy_static = "1.4.0"
orion = "0.17.0"
sled = "0.34.7"
sqlx = { version = "0.5.10", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.30"
tokio = { version = "1.14", features = ["rt", "macros"] }
uluru = "3.0.0"
